--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,13 @@
 body {
   background-color: #282a36;
   color: #bcc2cd;
-  font-family: "Times New Roman", Times, serif;
 }
 
-.jumbotron, .col-sm  {
+nav {
+    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, .15);
+}
+
+.jumbotron, .col-sm, .navbar  {
   background-color: #383a59;
 }
 
