--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+@media screen and (max-width: 600px) {
+  div.jumbotron {
+    display: none;
+  }
+}
+
 body {
   background-color: #282a36;
   color: #bcc2cd;
@@ -17,7 +23,7 @@ nav {
 }
 
 
-h1 {
+h1, h2 {
   color: #bd93f9;
 }
 
